--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.1",
-    "express": "^4.18.2"
+    "fastify": "^4.26.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@types/node": "^20.11.16",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
