--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.1",
-    "fastify": "^4.26.0"
+    "fastify": "^4.26.0",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
+    "@types/pg": "^8.11.0",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
