--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "dotenv": "^16.4.1",
     "fastify": "^4.26.0",
+    "fastify-plugin": "^4.5.1",
     "pg": "^8.11.3"
   },
   "devDependencies": {
