--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,11 @@
   "author": "Ben McMurtrie",
   "license": "ISC",
   "dependencies": {
+    "@fastify/swagger": "^8.14.0",
+    "@fastify/swagger-ui": "^3.0.0",
+    "@fastify/type-provider-typebox": "^4.0.0",
+    "@sinclair/typebox": "^0.32.14",
+    "ajv-formats": "^2.1.1",
     "dotenv": "^16.4.1",
     "fastify": "^4.26.0",
     "fastify-plugin": "^4.5.1",
