API Client scripts

--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,13 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "prestart": "",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "generate": "node ./scripts/generate",
+    "get-api": "node ./scripts/download-schema"
   },
   "private": true,
   "dependencies": {
