--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "prestart": "",
+    "prestart": "npm run generate",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
